# care-plugin-cookiecutter

./: README.md  cookiecutter.json  pyproject.toml  run.py
docs/: index.md  prompts.md  troubleshooting.md  tutorial.md
hooks/: pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.plugin_slug}}/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
{{cookiecutter.plugin_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.plugin_slug}}/docs/: index.md  installation.md  usage.md
{{cookiecutter.plugin_slug}}/src/{{cookiecutter.plugin_slug}}/: __init__.py  apps.py  settings.py  urls.py
{{cookiecutter.plugin_slug}}/src/{{cookiecutter.plugin_slug}}/api/: viewsets.py
{{cookiecutter.plugin_slug}}/src/{{cookiecutter.plugin_slug}}/models/: {{cookiecutter.plugin_slug}}_model.py
{{cookiecutter.plugin_slug}}/tests/: __init__.py  test_care_hello.py
{{cookiecutter.pypi_package_name}}/: README.md  pyproject.toml
{{cookiecutter.pypi_package_name}}/docs/: installation.md
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/: apps.py  settings.py  urls.py  views.py
