[project]
name = "care-plugin-cookiecutter"
version = "0.1.0"
description = "Cookiecutter template for creating Python packages to be used as plugins for OHC Care."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Open Health Care Network", email = "support@ohc.network" }
]
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]
dependencies = [
    "cookiecutter>=2.6.0",
    "typer>=0.16.0",
    "alabaster>=1.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "pytest-cookies",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"
]

[project.urls]
homepage = "https://github.com/ohcnetwork/care-plugin-cookiecutter"

[tool.ruff]
exclude = [
    "*cookiecutter.pypi_package_name*"
    ]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
